creation of poem pages

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3328,3 +3328,12 @@ input, select, textarea {
 
 		}
 
+		.poem-snapshot {
+			font-style: italic;
+			color: #555;
+			border-left: 4px solid #888;
+			margin: 1em 0;
+			padding-left: 1em;
+			background-color: #f9f9f9;
+			border-radius: 4px;
+		  }
