--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3337,3 +3337,7 @@ input, select, textarea {
 			background-color: #f9f9f9;
 			border-radius: 4px;
 		  }
+		  #main h1 {
+			color: #000000;
+		  }
+		  
