--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3388,5 +3388,17 @@ input, select, textarea {
 	font-size: 1.2em;
 	line-height: 1;
   }
+
+  .section-divider {
+	border: none;
+	height: 1.5px;
+	background: linear-gradient(to right, transparent, #888, transparent);
+	margin: 1rem 0;  /* smaller top and bottom margins */
+	width: 60%;
+	margin-left: auto;
+	margin-right: auto;
+	border-radius: 1px;
+  }
+  
   
   
