--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2634,7 +2634,7 @@ input, select, textarea {
 					left: 0;
 					width: 100%;
 					height: 100%;
-					background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100' viewBox='0 0 100 100' preserveAspectRatio='none'%3E%3Cstyle%3Eline %7B stroke-width: 0.25px%3B stroke: %23ffffff%3B %7D%3C/style%3E%3Cline x1='0' y1='0' x2='100' y2='100' /%3E%3Cline x1='100' y1='0' x2='0' y2='100' /%3E%3C/svg%3E");
+					/* background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100' viewBox='0 0 100 100' preserveAspectRatio='none'%3E%3Cstyle%3Eline %7B stroke-width: 0.25px%3B stroke: %23ffffff%3B %7D%3C/style%3E%3Cline x1='0' y1='0' x2='100' y2='100' /%3E%3Cline x1='100' y1='0' x2='0' y2='100' /%3E%3C/svg%3E"); */
 					background-position: center;
 					background-repeat: no-repeat;
 					background-size: 100% 100%;
@@ -3450,5 +3450,18 @@ body:not(.is-touch) .tiles article.style6:hover > .image:before {
     flex: 0 0 auto; /* keeps text area from growing the tile */
 }
 
-
-  
+/* CSS */
+.intro-text {
+    /*font-size: 1rem;    adjust as needed, e.g., 0.9rem for even smaller */
+    /*color: black;
+    text-transform: none;  /* keep letters as typed (no uppercase) */
+    /*font-weight: normal;   /*optional: makes it lighter than default h2 */
+    /*margin: 0;             /* optional: remove extra spacing */
+} 
+.intro-text {
+    font-size: 32px; /* smaller text */
+	font-weight: normal;
+    color: black; /* keep text black */
+    text-transform: none; /* keep lowercase */
+    letter-spacing: normal; /* remove extra spacing */
+}
